# ballistics

./: .Makefile.am.swp  .configure.ac.swp  .makefile.am.swp  Makefile  Makefile.am  README.md  configure.ac
include/: ballistics.h  bclib.h  config.h.in~  internal.h  iolibrary.h
src/: ballistics.c  bc  bc.c  bclib.c  iolibrary.c  makefile  winmake.bat
